# LibAFL

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  quiche-local
fuzzers/dynamic_analysis/: concatenated.json
fuzzers/dynamic_analysis/analysis/: #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmscam02.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmserr.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmshalf.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmsintrp.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmslut.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmsmtrx.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmsopt.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmspcs.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmssamp.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmstypes.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmswtpnt.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#src#cmsxform.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#utils#linkicc#linkicc.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#Little-CMS#utils#psicc#psicc.c.json  #home#john#Desktop#cjj_related#testing_new#fuzzing-test#LibAFL#fuzzers#dynamic_analysis#cms_transform_fuzzer.cc.json
fuzzers/my_fuzzers/baby_fuzzer_grimoire/: Cargo.toml
fuzzers/my_fuzzers/baby_fuzzer_grimoire/src/: main.rs
fuzzers/my_fuzzers/baby_fuzzer_minimizing/corpus/: 2366c3994fa40708
fuzzers/my_fuzzers/baby_fuzzer_multi/: Cargo.toml
fuzzers/my_fuzzers/baby_fuzzer_swap_diff/: Cargo.toml
fuzzers/my_fuzzers/boofuzz_test/: Cargo.toml
fuzzers/my_fuzzers/boofuzz_test/src/: main.rs
fuzzers/my_fuzzers/check_corpus/: Cargo.toml
fuzzers/my_fuzzers/check_corpus/src/: main.rs
fuzzers/my_fuzzers/check_corpus/start/: aioquic.sh  h2o.sh
fuzzers/my_fuzzers/dpifuzz_test/: Cargo.toml
fuzzers/my_fuzzers/dpifuzz_test/src/: main.rs
fuzzers/my_fuzzers/forkserver_simple/src/: main.rs  program.c
fuzzers/my_fuzzers/gen_testcase/: Cargo.toml
fuzzers/my_fuzzers/gen_testcase/corpus/: ccframes  cidframes  nci_huge_frames  pcframes  pingframes
fuzzers/my_fuzzers/gen_testcase/src/: main.rs
fuzzers/my_fuzzers/judge/: h2o-judge.sh
fuzzers/my_fuzzers/myExecutors/: Cargo.toml
fuzzers/my_fuzzers/myExecutors/src/: lib.rs
fuzzers/my_fuzzers/my_TCP_fuzzer_test/: Cargo.toml  build.rs  tcp_echo_server.c  tcp_echo_server.h  udp_echo_server.c  udp_echo_server.h
fuzzers/my_fuzzers/my_TCP_fuzzer_test/src/: main.rs
fuzzers/my_fuzzers/my_UDP_fuzzer_test/: Cargo.toml  Makefile.toml
fuzzers/my_fuzzers/my_UDP_fuzzer_test/src/: main.rs  udp_echo_server.c
fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_aflplusplus/: Cargo.toml  build.rs  start.sh
fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_libafl_cc/: Cargo.toml  Makefile.toml  judge.sh  judge2.sh  log.txt  nohup.out.bak  start.sh.bak  start2.sh
fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_libafl_cc_Diff/: Cargo.toml  start.sh
fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_libafl_cc_Diff/corpus/: 000312b487766b94  000af07b3bd19841  007577cee23b7bb0  00d1388b2a690012  027c468568657916  029f8ad167feb89c  02f70c1d99e61c7b  0302fd5b70337cdd  0329c2b721c0aa63  03c216f3a45c433e  043c04739caf1497  0474d8bad5eadfbf  04bd6e79db44ff9f  04bffb64bd650a29  04fc1b17efd55db3  0521c1a2d0de4ce1  0594b95149db7255  059f7c067642e32f  061beb96825237e6  0621bdc9c2eca119  065904abb1760a90  06659b32466a0cb9  067100c54a7c6f37  06f13ffeca0dcc5a  070e8d89991ad5d6  07129839fc2dd35a  07353b9e8ae1cf2f  073dcfc1330dc5fe  079eb79ee7a6e2c8  0868b0634825f976  08a4a0ee5e5c7551  08edaf28fbc6f1f1  08eea4cc09de156a  09e7f0920f75cf78  0a76c8bd79621ed2  0aa3ffa57a220e6a  0aa915b49ff88927  0aea75e2b2a61feb  0af666f1735e2c6b  0b0da4d2f6d9e19f  (+1140 more)
fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_libafl_cc_Diff/corpus-vul/: cidframes  cryptoframes  pcframes
fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_libafl_cc_Diff/judge/: h2o-judge.sh
fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_libafl_cc_Diff/src/: main.rs
fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_libafl_cc_Diff/start/: aioquic.sh  cf-quiche.sh  lsquic.sh
fuzzers/my_fuzzers/my_quiche_client_test/: Cargo.toml
fuzzers/my_fuzzers/my_quiche_client_test/src/: main.rs
fuzzers/my_fuzzers/network_quic_fuzz/: Cargo.toml  server.crt  server.key
fuzzers/my_fuzzers/network_quic_fuzz/src/: main.rs
fuzzers/my_fuzzers/quic_converter/: Cargo.toml  lsquic_converter.log.
fuzzers/my_fuzzers/quic_converter_tcp/: Cargo.toml
fuzzers/my_fuzzers/quic_converter_test_server/: Cargo.toml
fuzzers/my_fuzzers/quic_fuzz/: Cargo.toml
fuzzers/my_fuzzers/start/: aioquic.sh  cf-quiche.sh  google-quiche.sh  h2o.sh  haproxy.sh  haskell-quic.sh  lsquic.sh  msquic.sh  neqo.sh  nginx.sh  ngtcp2.sh  picoquic.sh  quic-go.sh  quinn.sh  s2n-quic.sh  xquic.sh
fuzzers/my_fuzzers/vul_cid/: Cargo.toml
fuzzers/my_fuzzers/vul_crypto/: Cargo.toml
fuzzers/my_fuzzers/vul_pc/: Cargo.toml
fuzzers/ori_fuzzers/dynamic_analysis/: build.sh
fuzzers/ori_fuzzers/forkserver_libafl_cc/: Cargo.toml
libafl/src/corpus/: inmemory_ondisk.rs
libafl/src/fuzzer/: mod.rs
libafl/src/mutators/: mutations.rs
libafl/src/schedulers/: mod.rs
libafl/src/stages/: mutational.rs
libafl/src/state/: mod.rs
libafl_nyx/: Cargo.toml
libafl_nyx/src/: helper.rs
(+58 files in other folders)
