[workspace]
resolver = "2"
members = [
    "libafl",
    "libafl_bolts",
    "libafl_cc",
    "libafl_concolic/symcc_runtime",
    "libafl_concolic/symcc_libafl",
    "libafl_concolic/test/dump_constraints",
    "libafl_concolic/test/runtime_test",
    "libafl_derive",
    "libafl_frida",
    "libafl_libfuzzer",
    "libafl_nyx",
    "libafl_qemu",
    "libafl_sugar",
    "libafl_targets",
    "libafl_tinyinst",
    "utils/build_and_test_fuzzers",
    "utils/deexit",
    "utils/libafl_benches",
    "utils/gramatron/construct_automata",
    "utils/desyscall",
    "utils/multi_machine_generator", "fuzzers/my_fuzzers/baby_fuzzer", "fuzzers/my_fuzzers/baby_fuzzer_gramation", "fuzzers/my_fuzzers/baby_fuzzer_grimoire", "fuzzers/my_fuzzers/baby_fuzzer_minimizing", "fuzzers/my_fuzzers/baby_fuzzer_multi", "fuzzers/my_fuzzers/baby_fuzzer_nautilus", "fuzzers/my_fuzzers/baby_fuzzer_swap_diff", "fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_aflplusplus", "fuzzers/my_fuzzers/forkserver_simple", "fuzzers/my_fuzzers/forkserver_libafl_cc", "fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_libafl_cc", "fuzzers/my_fuzzers/my_quiche_client_test",
]
default-members = [
    "libafl",
    "libafl_bolts",
    "libafl_cc",
    "libafl_derive",
    "libafl_targets",
]
exclude = [
    "bindings",
    "fuzzers",
    "libafl_qemu/libafl_qemu_build",
    "libafl_qemu/libafl_qemu_sys",
    "utils/noaslr",
    "utils/gdb_qemu",
    "utils/libafl_fmt",
    "utils/desyscall",
    "utils/multi_machine_generator",
    "scripts",
]

[workspace.package]
version = "0.13.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
