[workspace]
resolver = "2"
members = [
    "libafl",
    "libafl_bolts",
    "libafl_cc",
    "libafl_concolic/symcc_runtime",
    "libafl_concolic/symcc_libafl",
    "libafl_concolic/test/dump_constraints",
    "libafl_concolic/test/runtime_test",
    "libafl_derive",
    "libafl_frida",
    "libafl_libfuzzer",
    "libafl_qemu",
    "libafl_sugar",
    "libafl_targets",
    "libafl_tinyinst",
    "utils/build_and_test_fuzzers",
    "utils/deexit",
    "utils/libafl_benches",
    "utils/gramatron/construct_automata",
    "utils/desyscall",
    "utils/multi_machine_generator",
    "fuzzers/my_fuzzers/gen_testcase",
    "fuzzers/my_fuzzers/my_UDP_fuzzer_test_with_libafl_cc_Diff",
    "fuzzers/my_fuzzers/quic_converter",
    "fuzzers/my_fuzzers/check_corpus", "fuzzers/my_fuzzers/quic_converter_test_server", "fuzzers/my_fuzzers/boofuzz_test", "fuzzers/my_fuzzers/aflnet_test", "fuzzers/my_fuzzers/dpifuzz_test", "fuzzers/my_fuzzers/network_quic_fuzz", "fuzzers/my_fuzzers/quic_fuzz", "fuzzers/my_fuzzers/quic_converter_tcp", "fuzzers/my_fuzzers/nyx_quic_fuzz", "fuzzers/my_fuzzers/quic_converter_nyx", "fuzzers/my_fuzzers/non_nyx_quic_fuzz", ]
default-members = [
    "libafl",
    "libafl_bolts",
    "libafl_cc",
    "libafl_derive",
    "libafl_targets",
]
exclude = [
    "bindings",
    "fuzzers",
    "libafl_qemu/libafl_qemu_build",
    "libafl_qemu/libafl_qemu_sys",
    "utils/noaslr",
    "utils/gdb_qemu",
    "utils/libafl_fmt",
    "utils/desyscall",
    "utils/multi_machine_generator",
    "scripts",
]

[workspace.package]
version = "0.13.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
