[package]
name = "libafl_nyx"
version = "0.13.0-k4ra5u"
edition = "2021"
authors = ["syheliel <syheliel@gmail.com>"]
description = "libafl using nyx, only avaliable on linux"
documentation = "https://docs.rs/libafl_nyx"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "security"]
categories = ["development-tools::testing", "emulators", "embedded", "os", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
libnyx = { path = "../libnyx/libnyx", version = "0.1.0-k4ra5u" }
libafl = { path = "../LibAFL/libafl/", features = ["std", "libafl_derive", "frida_cli" ]}
libafl_bolts = { path = "../LibAFL/libafl_bolts", features = ["std", "libafl_derive", "frida_cli" ]}
libafl_targets = { path = "../LibAFL/libafl_targets", version = "0.13.0-k4ra5u", features = ["std", "sancov_cmplog"] }
nix = { version = "0.29", features = ["fs"] }
typed-builder = "0.18"