[package]
name = "my_TCP_fuzzer_test"

edition = "2021"
default-run = "fuzzer_sd"
version.workspace = true

[features]
tui = []
multimap = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true


[build-dependencies]
anyhow = "1"
bindgen = "0.69.4"
cc = "1.0"

[dependencies]
libafl = { path = "../../../libafl" }
libafl_bolts = { path = "../../../libafl_bolts" }
libafl_targets = { path = "../../../libafl_targets", features = ["sancov_pcguard_hitcounts", "libfuzzer", "sancov_cmplog", "pointer_maps"] }
mimalloc = { version = "*", default-features = false }

libafl_cc = { path = "../../../libafl_cc/" }
hdhunter = { path = "../myExecutors/" }


[[bin]]
name = "fuzzer_sd"
path = "src/main.rs"

[[bin]]
name = "libafl_cc"
path = "src/bin/libafl_cc.rs"
