[package]
name = "my_quiche_client_test"
edition = "2021"
version.workspace = true

[dependencies]
log = { version = "0.4", features = ["std"] }
libc = "0.2"
libm = "0.2"
ring = "0.17"
slab = "0.4"
once_cell = "1"
octets = { version = "0.3", path = "../../../quiche/octets" }
boring = { version = "4", optional = true }
foreign-types-shared = { version = "0.3.0", optional = true }
intrusive-collections = "0.9.5"
qlog = { version = "0.13", path = "../../../quiche/qlog", optional = true }
sfv = { version = "0.9", optional = true }
smallvec = { version = "1.10", features = ["serde", "union"] }
quiche = {path = "../../../quiche/quiche"}
url = "2.5"
mio = { version = "0.8", features = ["net", "os-poll"] }
winapi = { version = "0.3", features = ["wincrypt", "ws2def", "ws2ipdef", "ws2tcpip"] }


